--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@ section .google {
     display: block;
 }
 
-nav .images {
+.images {
     text-decoration: none;
     margin: 5px auto;
     text-align: right;
