work on nav bar

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,10 @@
-section .google {
+section {
     margin: 1px auto;
     display: block;
 }
 
 ul {
-    display: inline;
+    display: inline-block;
 }
 
 #left_menu {
