fix css grid display for top_menu list

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,53 +10,56 @@ section #search {
     background-color: red;
 }
 
+/* Ul for user interaction */
+
 nav {
-    display: grid;
-    grid-template-columns: 50px auto 50px;
     margin: 0px auto;
     padding: 0px;
 }
 
 ul {
     list-style-type: none;
-    display: inline-block;
     margin: 0px;
     padding: 0px;
 }
 
-#left_menu {
-    margin: 0px auto;
-    padding: 0px;
-    overflow: auto;
-}
-
-#right_menu {
-    margin: 0px auto;
-    padding: 0px;
-    overflow: auto;
+ul #top_info {
+    display: grid;
+    grid-template-columns: 50px 50px auto 50px 50px;
+    grid-template-rows: 50px;
 }
 
 .about {
+    grid-column-start: 1;
+    grid-row-start: 1;
     text-decoration: none;
     margin: 0px;
     padding: 0px;
 }
 
 .store {
+    grid-column-start: 2;
+    grid-row-start: 1;
     text-decoration: none;
     margin: 0px;
     padding: 0px;
 }
 
 .gmail {
+    grid-column-start: 4;
+    grid-row-start: 1;
     text-decoration: none;
     margin: 0px;
     padding: 0px;
 }
 
 .images {
+    grid-column-start: 5;
+    grid-row-start: 1;
     text-decoration: none;
     margin: 0px;
     padding: 0px;
 }
+
+/*end*/
 
