--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,7 +20,7 @@ ul {
 
 #top_info {
     display: grid;
-    grid-template-columns: 50px 50px 750px 50px 50px;
+    grid-template-columns: 50px 50px auto 50px 50px;
     grid-template-rows: 50px;
 }
 
@@ -41,7 +41,8 @@ ul {
 }
 
 .gmail {
-    grid-column-start: 5;
+    grid-column-start: 4;
+    grid-column-end: 4;
     grid-row-start: 1;
     text-decoration: none;
     margin: 0px;
@@ -50,6 +51,7 @@ ul {
 
 .images {
     grid-column-start: 5;
+    grid-column-end: 5;
     grid-row-start: 1;
     text-decoration: none;
     margin: 0px;
